[package]
authors = ["slinkardbrandon@gmail.com"]
edition = "2018"
name = "moleculer"
version = "0.0.1"

[features]
default = ["nats"]

# transporters
transporter-nats = ["nats"]

# serializers
serializer-json = ["serde_json"]
serializer-protobuf = ["protobuf"]

[dependencies]
nats = {version = "0.8", optional = true}
protobuf = {version = "2.18", optional = true}
serde_json = {version = "1.0", optional = true}
